# rift

./: .gitignore  CHANGELOG.md  CLAUDE.md  EVORIFT-IMPLEMENTATION-PROMPT.md  LICENSE  README.md  THIRD-PARTY.md  debug-probe.cjs  deny.toml  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml  site.yml
site/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  wrangler.jsonc
site/scripts/: make-icon.mjs  make-og.mjs  make-transparent-icon.mjs  preview-icon.mjs
site/src/: app.css  app.html
site/src/lib/: BlackHoleHero.svelte  i18n.svelte.js
site/src/routes/: +error.svelte  +layout.js  +layout.svelte  +page.svelte
site/static/: _headers
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: build-app.ps1  deploy-app.ps1  deploy-full.ps1  deploy-svc-warp.ps1  diag.ps1  enable-and-test.ps1  finish-deploy.ps1  fix-svc.ps1  fix-voice-ports.ps1  install-svc.ps1  overinstall-test.ps1  redeploy-all.ps1  redeploy-voice.ps1  reinstall-test.ps1  restore-zapret.ps1  setup-warp.ps1  solve-voice.ps1  start-svc.ps1  svc-console.err  svc-console.out  svc_ctl.rs  test-evorift.ps1  torture-test.ps1  uninstall.ps1  update-svc.ps1  voice-capture.ps1
src-tauri/icons/: icon.icns
src-tauri/resources/winws/: hostlist-discord-roblox.txt
src-tauri/resources/winws/windivert.filter/: windivert_part.discord_media_wide.txt
src-tauri/src/: client.rs  engine.rs  ipc.rs  lib.rs  main.rs  pid_scan.rs  service.rs  warp.rs
src-tauri/windows/: clean-evorift.ps1  gen-bmp.ps1  gen-installer-art.ps1  hooks.nsh  installer.nsi
src/lib/: i18n.svelte.ts  log.svelte.ts  state.svelte.ts  theme.css  toast.svelte.ts
src/lib/components/: BinaryRain.svelte  BlackHole.svelte  NavRail.svelte  Onboarding.svelte  ParticleEmblem.svelte  RiftBackground.svelte  RiftMark.svelte  RiftPortal3D.svelte  TitleBar.svelte
src/lib/components/sections/: Advanced.svelte  Apps.svelte  Connection.svelte  Limits.svelte  Logs.svelte  Performance.svelte  Settings.svelte
src/lib/components/ui/: Dropdown.svelte  Modal.svelte  RiskBadge.svelte  Segmented.svelte  Slider.svelte  Sparkline.svelte  Toaster.svelte  Toggle.svelte  Tooltip.svelte
src/routes/: +layout.svelte  +page.svelte
